--- a/css/css.css
+++ b/css/css.css
@@ -10,8 +10,6 @@ nav{
 }
 .sidebar{
     margin:0;
-    border:6px solid black;
-    height:1000px;
     width:16rem;
     font-size:1.1rem;
     transition: all 0.5s ease;
@@ -23,7 +21,7 @@ nav{
     color: white;
 }
 .sidebar-heading{
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 10px;
 }
 .sidebar i{
@@ -33,3 +31,31 @@ nav{
    padding:3px;
    margin-right: 4px;
 }
+.main-body{
+    width: 84rem;
+}
+.icon i{
+    width:100px;
+    height:100px;
+    background:white;
+    font-size:55px;
+    color:#dc3545;
+    border-radius: 50%;
+
+    padding-top: 18px;
+    position: relative;
+    left:35%;
+    bottom:5px;
+}
+.dash{
+    box-shadow: 0 0rem 1rem gray;
+}
+.icon a:hover{
+    text-decoration: none;
+}
+.icon i:hover{
+    font-size:65px;
+    background:#dc3545;
+    color:white;
+}
+
