--- a/css/css.css
+++ b/css/css.css
@@ -8,6 +8,18 @@ nav{
     width:100%;
     min-width: 0;
 }
+
+html{
+    width: 100%;
+    height:100%;
+}
+
+.container{
+    background-color: rgba(189, 188, 188, 0.492);
+    border-radius: 10px;
+    padding:5px;
+}
+
 .sidebar{
     margin:0;
     width:16rem;
